[gd_scene load_steps=5 format=2]

[ext_resource path="res://external/aseprite/weapons/stabby.png" type="Texture" id=1]
[ext_resource path="res://weapons/stabby.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "stab"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("moving_part:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 21, 0 ), Vector2( 21, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("moving_part:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[node name="stabby" type="Node2D"]
script = ExtResource( 2 )

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/stab = SubResource( 1 )

[node name="moving_part" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="moving_part"]
position = Vector2( 12, 1 )
texture = ExtResource( 1 )

[node name="area_2d" type="Area2D" parent="moving_part"]
position = Vector2( 24, 1 )
collision_layer = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="moving_part/area_2d"]
shape = SubResource( 2 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 1.1
one_shot = true
autostart = true

[connection signal="body_entered" from="moving_part/area_2d" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
